[package]
name = "channels"
description = "Bidirectional channel-like communication over generic Read/Write streams"
version = "0.8.0"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
documentation = "https://docs.rs/channels"
readme = "README.md"
keywords = ["client", "networking", "server", "stream", "channel"]
categories = ["network-programming"]

include = ["/src", "/examples", "LICENSE"]

[dependencies]
serde = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }

tokio = { version = "1.29", features = ["io-util"], optional = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }

[features]
default = ["serde"]

statistics = []
serde = ["dep:serde", "dep:bincode"]

tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
