[package]
name = "channels"
description = "Bidirectional channel-like communication over generic Read/Write streams"
version = "0.8.0"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
documentation = "https://docs.rs/channels"
readme = "README.md"
keywords = ["client", "networking", "server", "stream", "channel"]
categories = ["network-programming"]

include = ["/src", "/examples", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }

tokio = { version = "1.29", features = ["io-util", "rt"], optional = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }

[features]
default = ["serde", "bincode"]

statistics = []

serde = ["dep:serde"]
bincode = ["dep:bincode"]
cbor = ["dep:ciborium"]

tokio = ["dep:tokio"]

[[test]]
name = "test_transport_async"
required-features = ["tokio"]

[[test]]
name = "test_big_data_async"
required-features = ["tokio"]

[[test]]
name = "test_async_with_sync"
required-features = ["tokio"]

[[example]]
name = "tcp_async_server"
required-features = ["tokio"]

[[example]]
name = "tcp_async_client"
required-features = ["tokio"]
