[workspace]
resolver = "2"
members = [
	"channels-io",
	"channels-macros",
	"channels-packet",
	"channels-serdes",
	"channels",

	"benches",
	"examples",
	"examples/chat-app",
	"stress-tests",
	"tests-integration",
]
default-members = [
	"channels-io",
	"channels-macros",
	"channels-packet",
	"channels-serdes",
	"channels",
]

[workspace.dependencies]
channels = { path = "./channels", features = ["full"] }

############################
########   Lints  ##########
############################

[workspace.lints.rust]
missing_docs = "deny"
arithmetic_overflow = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
style = "warn"
cargo = "warn"
perf = "warn"
correctness = "warn"
complexity = "warn"
pedantic = "warn"
suspicious = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
useless_conversion = "warn"
wrong_self_convention = "warn"
missing_assert_message = "warn"
unwrap_used = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
error_impl_error = "warn"
new_without_default = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[workspace.lints.rustdoc]
all = "warn"
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"

############################
######## Profiles ##########
############################

[profile.dev]
debug = 0

[profile.release]
incremental = true
debug = 0
