[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false

[[bench]]
name = "in_memory"
harness = false

[dependencies]
channels = { workspace = true, features = ["tokio"] }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
