[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false
autobenches = false

[dependencies]
channels = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1" }
criterion = "0.5.1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "send"
path = "send.rs"
harness = false
