[package]
name = "channels-io"
version = "0.1.0"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
description = """
Abstractions on sync & async IO traits.
"""
categories = ["asynchronous", "no-std"]

[features]
std = []
tokio = ["dep:tokio", "std"]
futures = ["dep:futures", "std"]

[dependencies]
tokio = { version = "1", features = ["io-util"], optional = true }
futures = { version = "0.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]
