[package]
name = "channels-io"
version = "0.2.0"
authors = ["1337"]
edition = "2021"
description = """
Async agnostic/Sync IO & buffer management abstractions.
"""
documentation = "https://docs.rs/channels-io"
readme = "README.md"
homepage = "https://github.com/threadexio/channels-rs"
repository = "https://github.com/threadexio/channels-rs"
license = "MIT"
keywords = ["io"]
categories = [
	"asynchronous",
	"network-programming",
	"no-std",
	"no-std::no-alloc",
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]

[dependencies]
core2 = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.6", optional = true }
futures = { version = "0.3", default-features = false, features = ["std"], optional = true }
smol = { version = "2", optional = true }
tokio = { version = "1", optional = true }

[dependencies.channels-macros]
version = "=0.1.0"
path = "../channels-macros"

[dev-dependencies]
async-std = { version = "1" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }

[features]
alloc = []
std = ["alloc"]

core2 = ["dep:core2"]
embedded-io = ["dep:embedded-io"]
futures = ["dep:futures", "std"]
smol = ["dep:smol"]
tokio = ["dep:tokio", "std"]

[lints]
workspace = true
