[package]
name = "channels-macros"
version = "0.1.0"
authors = ["1337"]
edition = "2021"
description = """
Procedural macros for channels.
"""
documentation = "https://docs.rs/channels-macros"
readme = "README.md"
homepage = "https://github.com/threadexio/channels-rs"
repository = "https://github.com/threadexio/channels-rs"
license = "MIT"
keywords = ["sync", "async", "macro", "procedural"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
