[package]
name = "channels-packet"
version = "0.1.1"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
description = """
Utilities to parse channels packets.
"""
categories = ["parsing", "parser-implementations", "no-std"]
keywords = ["parser", "binary", "packet"]
readme = "README.md"

[dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]
