[package]
name = "channels-packet"
version = "0.1.2"
authors = ["1337"]
edition = "2021"
description = """
Utilities to parse channels packets.
"""
documentation = "https://docs.rs/channels-packet"
readme = "README.md"
homepage = "https://github.com/threadexio/channels-rs"
repository = "https://github.com/threadexio/channels-rs"
license = "MIT"
keywords = ["parser", "binary", "packet"]
categories = ["parsing", "parser-implementations", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]

[dependencies.channels-io]
version = "=0.2.1"
path = "../channels-io"
default-features = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
std = []

[lints]
workspace = true
