[package]
name = "channels-serdes"
version = "0.1.2"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
description = """
Utilities to serialize/deserialize types.
"""
categories = ["parsing", "parser-implementations"]
keywords = ["serde", "serializer", "deserializer"]
readme = "README.md"

[features]
bincode = ["dep:serde", "dep:bincode"]
cbor = ["dep:serde", "dep:ciborium"]
json = ["dep:serde", "dep:serde_json"]
borsh = ["dep:borsh"]

[dependencies]
cfg-if = "1.0"

bincode = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
borsh = { version = "1.3", optional = true }

channels-io = { version = "0.1.0", features = [
	"alloc",
], path = "../channels-io" }

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
optional = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]
