[package]
name = "channels-serdes"
version = "0.1.2"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
description = """
Utilities to serialize/deserialize types.
"""
categories = ["parsing", "parser-implementations"]
keywords = ["serde", "serializer", "deserializer"]
readme = "README.md"

[features]
alloc = []
std = ["alloc"]
bincode = ["dep:serde", "dep:bincode"]
cbor = ["dep:serde", "dep:ciborium", "std"]
json = ["dep:serde", "dep:serde_json"]
borsh = ["dep:borsh"]
crc = ["dep:crc", "alloc"]
deflate = ["dep:flate2", "std", "channels-io/std"]

[dependencies]
bincode = { version = "1.3", optional = true }
borsh = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
crc = { version = "3.0", optional = true }
flate2 = { version = "1.0", optional = true }
serde = { version = "1.0", default_features = false, optional = true }

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
optional = true

[dependencies.channels-io]
version = "0.1.0"
features = ["alloc"]
path = "../channels-io"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]
