[package]
name = "channels-serdes"
version = "0.1.2"
authors = ["1337"]
edition = "2021"
description = """
Utilities to serialize/deserialize types.
"""
documentation = "https://docs.rs/channels-serdes"
readme = "README.md"
homepage = "https://github.com/threadexio/channels-rs"
repository = "https://github.com/threadexio/channels-rs"
license = "MIT"
keywords = ["serde", "serializer", "deserializer"]
categories = ["parsing", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]

[features]
std = []

aead = ["dep:ring"]
bincode = ["dep:serde", "dep:bincode"]
borsh = ["dep:borsh"]
cbor = ["dep:serde", "dep:ciborium", "std"]
crc = ["dep:crc"]
deflate = ["dep:flate2", "std"]
hmac = ["dep:ring"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
bincode = { version = "1.3", optional = true }
borsh = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
crc = { version = "3.0", optional = true }
flate2 = { version = "1.0", optional = true }
ring = { version = "0.17", default-features = false, optional = true }
serde = { version = "1.0", default_features = false, optional = true }
serde_json = { version = "1.0", default_features = false, features = ["alloc"], optional = true }

[lints]
workspace = true
