[package]
name = "channels"
description = "Bidirectional channel-like communication over generic Read/Write streams"
version = "0.11.2"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
documentation = "https://docs.rs/channels"
readme = "README.md"
keywords = ["client", "networking", "server", "stream", "channel"]
categories = ["network-programming"]
rust-version = "1.64.0"

[dependencies]
channels-packet = { version = "0.1", path = "../channels-packet" }
channels-serdes = { version = "0.1", path = "../channels-serdes" }

serde = { version = "1.0", default-features = false, optional = true }

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util"]
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[features]
default = ["bincode"]
full = ["statistics", "bincode", "cbor", "json", "borsh"]

statistics = []

tokio = ["dep:tokio"]
futures = ["dep:futures"]

bincode = ["channels-serdes/bincode", "dep:serde"]
cbor = ["channels-serdes/cbor"]
json = ["channels-serdes/json"]
borsh = ["channels-serdes/borsh"]

[package.metadata.docs.rs]
features = ["full", "tokio"]
all-features = false
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]
