[package]
name = "channels"
description = "Bidirectional channel-like communication over generic Read/Write streams"
version = "0.11.2"
edition = "2021"
authors = ["1337"]
license = "MIT"
repository = "https://github.com/threadexio/channels-rs"
documentation = "https://docs.rs/channels"
readme = "README.md"
keywords = ["client", "networking", "server", "stream", "channel"]
categories = ["network-programming"]

[dependencies]
channels-packet = { version = "0.1.1", path = "../channels-packet" }
channels-serdes = { version = "0.1.2", path = "../channels-serdes" }
channels-io = { version = "0.1.0", path = "../channels-io", features = [
	"alloc",
] }
channels-macros = { version = "0.1.0", path = "../channels-macros" }

serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

[features]
statistics = []

std = ["channels-io/std"]
tokio = ["channels-io/tokio"]
futures = ["channels-io/futures"]

bincode = ["channels-serdes/bincode", "dep:serde"]
cbor = ["channels-serdes/cbor"]
json = ["channels-serdes/json"]
borsh = ["channels-serdes/borsh"]
crc = ["channels-serdes/crc"]
deflate = ["channels-serdes/deflate"]

full = [
	"statistics",
	"std",
	"tokio",
	"futures",
	"bincode",
	"cbor",
	"json",
	"borsh",
	"crc",
	"deflate",
]

default = ["std", "bincode"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]
