[package]
name = "channels"
version = "0.11.2"
authors = ["1337"]
edition = "2021"
description = """
Bidirectional channel-like communication over generic Read/Write streams.
"""
documentation = "https://docs.rs/channels"
readme = "README.md"
homepage = "https://github.com/threadexio/channels-rs"
repository = "https://github.com/threadexio/channels-rs"
license = "MIT"
keywords = ["client", "networking", "server", "stream", "channel"]
categories = ["network-programming"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "channels_nightly"]
rustdoc-args = ["--cfg", "channels_nightly"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dependencies.channels-macros]
version = "0.1.0"
path = "../channels-macros"

[dependencies.channels-io]
version = "0.1.0"
path = "../channels-io"
features = ["alloc"]

[dependencies.channels-packet]
version = "0.1.1"
path = "../channels-packet"

[dependencies.channels-serdes]
version = "0.1.2"
path = "../channels-serdes"

[dev-dependencies]
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }

[features]
statistics = []

core2 = ["channels-io/core2"]
futures = ["channels-io/futures"]
smol = ["channels-io/smol"]
std = ["channels-io/std"]
tokio = ["channels-io/tokio"]

full-io = ["core2", "futures", "smol", "std", "tokio"]

aead = ["channels-serdes/aead"]
bincode = ["channels-serdes/bincode", "dep:serde"]
borsh = ["channels-serdes/borsh"]
cbor = ["channels-serdes/cbor"]
crc = ["channels-serdes/crc"]
deflate = ["channels-serdes/deflate"]
hmac = ["channels-serdes/hmac"]
json = ["channels-serdes/json"]

full-serdes = [
	"aead",
	"bincode",
	"borsh",
	"cbor",
	"crc",
	"deflate",
	"hmac",
	"json",
]

full = ["full-io", "full-serdes", "statistics"]
default = ["std", "bincode"]

[lints]
workspace = true
