[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[[example]]
name = "tcp_async_client"
path = "tcp_async_client.rs"

[[example]]
name = "tcp_async_server"
path = "tcp_async_server.rs"

[[example]]
name = "tcp_echo_client"
path = "tcp_echo_client.rs"

[[example]]
name = "tcp_echo_server"
path = "tcp_echo_server.rs"

[[example]]
name = "send_stdout"
path = "send_stdout.rs"

[[example]]
name = "recv_stdin"
path = "recv_stdin.rs"

[dependencies]
channels = { workspace = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
