[package]
name = "stress-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
channels = { workspace = true, features = ["full", "tokio"] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serial_test = "2.0"
