[package]
name = "stress-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
channels = { workspace = true, features = ["full", "tokio"] }
ringbuf = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serial_test = "2.0"
